(refs #2362) fixes buttons spacing of tinymce-toolbar for IE6/7

--- a/plugins/opSkinBasicPlugin/web/css/main.css
+++ b/plugins/opSkinBasicPlugin/web/css/main.css
@@ -1440,6 +1440,7 @@ div.activityBox div.box_list div.box_body ul.operation li {
  * toolbar of opWidgetFormRichTextareaOpenPNE
  *----------------------------------------------------------------------------*/
 div.parts table.mceToolbar {
+  table-layout: auto;
   width: auto;
 }
 
